mystyle.css
/* h1{color:green;}*/
h1{color:#F0A050;}
th.important{color:red;}

table {border-collapse: collapse｝

table, th, td {border: 1px solid black;}

th.important　{color: red;}

p.sample1{border:double 10px#0000ff;}
p.sample2{border:inset 10px #ff0000;}
p.sample3{margin:30px 30px;padding:10px;border:medium solid #ff00ff;}

